--- a/.github/workflows/rpmbuild-on-release-created.yaml
+++ b/.github/workflows/rpmbuild-on-release-created.yaml
@@ -11,6 +11,7 @@ jobs:
     - uses: gsfjohnson/rpmbuild@el6
       with:
         spec_file: "dev/install/magma.spec"
+        preinstall_packages: epel-release
     - uses: actions/upload-artifact@v1.0.0
       with:
         name: Binary RPM
