--- a/.github/workflows/rpmbuild-on-release-created.yaml
+++ b/.github/workflows/rpmbuild-on-release-created.yaml
@@ -9,10 +9,15 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: gsfjohnson/rpmbuild@el6
+      id: rpm
       with:
         spec_file: "dev/install/magma.spec"
         preinstall_packages: epel-release
-    - uses: actions/upload-artifact@v1.0.0
+    - uses: actions/upload-artifact@v2
       with:
-        name: Binary RPM
-        path: ${{ steps.rpm.outputs.rpm_dir_path }}
+        name: Binaries
+        path: ${{ steps.rpm.outputs.rpm_dir }}
+    - uses: actions/upload-artifact@v2
+      with:
+        name: SRPM
+        path: ${{ steps.rpm.outputs.srpm_path }}
